--- a/apps/docs/src/components/home/what-are-feature-flags.astro
+++ b/apps/docs/src/components/home/what-are-feature-flags.astro
@@ -3,31 +3,26 @@ import SectionHr from "./common/section-hr.astro";
 import SectionTitle from "./common/section-title.astro";
 ---
 
-<section
-  class="text-gray-600 dark:text-gray-300 body-font"
-  id="feature-flags"
->
+<section class="text-emphasis body-font" id="feature-flags">
   <div class="container px-5 py-24 mx-auto flex-col flex-wrap">
-    <SectionTitle>
-      What are feature flags?
-    </SectionTitle>
+    <SectionTitle> What are feature flags? </SectionTitle>
     <SectionHr />
     <div class="max-w-2xl mx-auto">
       <p class="leading-relaxed text-base">
         Many popular applications use feature flags to roll out and test new
-        functionality without having to redeploy the app and its assets.
-        Learn more about why feature flags are so useful in our
-        documentation or Wikipedia.
+        functionality without having to redeploy the app and its assets. Learn
+        more about why feature flags are so useful in our documentation or
+        Wikipedia.
       </p>
       <div class="flex md:mt-4 mt-6 justify-center">
         <a
-          class="inline-flex text-white bg-primary-500 border-0 py-1 px-4  hover:bg-primary-600 rounded"
+          class="inline-flex text-white bg-primary-500 border-0 py-1 px-4 hover:bg-primary-600 rounded"
           href="/documentation/core-concepts"
         >
           Core Concepts
         </a>
         <a
-          class="text-primary-500 dark:text-primary-300 inline-flex items-center ml-4"
+          class="text-link inline-flex items-center ml-4"
           href="https://en.wikipedia.org/wiki/Feature_toggle"
           target="_blank"
         >
