fix: add open source sections for services and remove pagefind from local

--- a/apps/docs/src/components/home/services.astro
+++ b/apps/docs/src/components/home/services.astro
@@ -18,9 +18,9 @@ import SectionTitle from "./common/section-title.astro";
       <div class="flex md:mt-4 mt-6 justify-center">
         <a
           class="inline-flex text-white bg-primary-500 border-0 py-1 px-4 hover:bg-primary-600 rounded"
-          href=""
+          href="/services"
         >
-          Contact Us
+          Learn More
         </a>
       </div>
     </div>
