--- a/apps/docs/src/pages/index.astro
+++ b/apps/docs/src/pages/index.astro
@@ -6,7 +6,7 @@ import HomeHowItWorks from "../components/home/how-it-works.astro";
 import HomeFeatures from "../components/home/features.astro";
 import HomeDocumentation from "../components/home/documentation.astro";
 import HomeHelp from "../components/home/help.astro";
-// import HomeServices from "../components/home/services.astro";
+import HomeServices from "../components/home/services.astro";
 ---
 
 <Layout title="Vexilla">
@@ -14,9 +14,9 @@ import HomeHelp from "../components/home/help.astro";
     <HomeHero />
     <HomeFeatureFlags />
     <HomeFeatures />
+    <HomeServices />
     <HomeHowItWorks />
     <HomeDocumentation />
     <HomeHelp />
-    <!-- <HomeServices /> -->
   </main>
 </Layout>
