--- a/scripts/README.mustache
+++ b/scripts/README.mustache
@@ -7,18 +7,18 @@ This is the {{LanguageDisplayName}} client library for Vexilla, a static file-ba
 - [Getting Started](#getting-started)
   - [Installation](#installation)
   - [Setup](#setup)
-  - [Generate Types](#generate-types-optional)
   - [Usage](#usage)
   - [Full Example](#full-example)
 - [What are feature flags?](#what-are-feature-flags)
 - [How does it work?](#how-does-it-work)
 - [Support](#support)
 - [API](#api)
+- [Generate Types](#generate-types-optional)
 - [Contributing](#contributing)
 
 ## Getting Started
 
-To get started is easy.
+To get started is easy. Follow these steps to get started with integration.
 
 ### Installation
 
@@ -26,41 +26,13 @@ To get started is easy.
 
 ### Setup
 
-You will need to create a Client within your app. This optionally takes in the `{{CustomInstanceHash}}` for use with gradual rollout.
+You will need to create a Client within your app. This optionally takes in the `{{CustomInstanceHash}}` for use with gradual rollout as well as Selective features.
 
 After creation, call `{{SyncFlags}}`. This can be chained from the constructor since it returns the client instance.
 
+**Important Note**: All methods that make HTTP requests take in a callback for the request itself. This allows you to use your existing dependencies or standard library methods to keep this bundle smaller and less opinionated.
+
 {{SetupSnippet}}
-
-### Generate Types (Optional)
-
-We have created a tool to generate types for usage in your code. It will crawl your JSON structures and create consts or enums to help prevent typos and other "magic string" related issues. You just need to pass the URL of the JSON file where it is hosted.
-
-#### NPM
-
-To use the tool, you can run it directly from NPM.
-
-```
-npx vexilla types {{LanguageName}} REMOTE_JSON_URL
-```
-
-#### Automatic Install Script
-
-You can also use a precompiled binary for your platform. This install script will automatically choose the right binary for you:
-
-```
-curl -o- -s https://raw.githubusercontent.com/vexilla/vexilla/main/install.sh | bash
-```
-
-The install script also accepts a target install path:
-
-```
-curl -o- -s https://raw.githubusercontent.com/vexilla/vexilla/main/install.sh | bash
-```
-
-#### Manual Installation
-
-If you prefer to download the binary manually you can get it from the releases section in Github, [https://github.com/vexilla/vexilla/releases](https://github.com/vexilla/vexilla/releases)
 
 ### Usage
 
@@ -91,6 +63,36 @@ The process is simple but has several steps to get up and running. Please see ou
 
 {{API}}
 
+## Generate Types (Optional)
+
+We have created a tool to generate types for usage in your code. It will crawl your JSON structures and create consts or enums to help prevent typos and other "magic string" related issues. You just need to pass the URL of the JSON file where it is hosted.
+
+### NPM
+
+To use the tool, you can run it directly from NPM.
+
+```
+npx vexilla types {{LanguageName}} REMOTE_JSON_URL
+```
+
+### Automatic Install Script
+
+You can also use a precompiled binary for your platform. This install script will automatically choose the right binary for you:
+
+```
+curl -o- -s https://raw.githubusercontent.com/vexilla/vexilla/main/install.sh | bash
+```
+
+The install script also accepts a target install path:
+
+```
+curl -o- -s https://raw.githubusercontent.com/vexilla/vexilla/main/install.sh | bash -s -- -b /usr/local/bin/
+```
+
+### Manual Installation
+
+If you prefer to download the binary manually you can get it from the releases section in Github, [https://github.com/vexilla/vexilla/releases](https://github.com/vexilla/vexilla/releases)
+
 ## Support
 
 Have you run into a bug? Is there a feature you feel is missing? Feel free to create a [GitHub Issue](https://github.com/vexilla/vexilla/issues).
@@ -103,18 +105,16 @@ Would you like to contribute to this client SDK? There are many ways you can hel
 
 If you would like to contribute to the app, docs, or other parts of the project, please go see our [Contribution Guide](https://vexilla.dev/documentation/contributing).
 
+## Using Vexilla in production?
+
+We would love to add your company's logo to our usage section on the website. Please submit your name and logo url in [this issue](https://github.com/vexilla/vexilla/issues/25).
+
 ## Sponsors
 
 No sponsors yet. This could be a link and icon for **your** company here.
 
-## LICENSE
+## License
 
-MIT
+Current Vexilla code is released under a combination of two licenses, the Business Source License (BSL) and the MIT License.
 
-Copyright 2023 Vexilla
-
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+Please see the [License file](../../../LICENSE) for more info.
