feat(docs): add contributors list to home page

--- a/apps/docs/src/pages/index.astro
+++ b/apps/docs/src/pages/index.astro
@@ -7,6 +7,7 @@ import HomeFeatures from "../components/home/features.astro";
 import HomeDocumentation from "../components/home/documentation.astro";
 import HomeHelp from "../components/home/help.astro";
 import HomeServices from "../components/home/services.astro";
+import ContributorsList from "@/components/ContributorsList.astro";
 ---
 
 <Layout title="Vexilla">
@@ -18,5 +19,6 @@ import HomeServices from "../components/home/services.astro";
     <HomeHowItWorks />
     <HomeDocumentation />
     <HomeHelp />
+    <ContributorsList />
   </main>
 </Layout>
