fix: make blog page prettier and add rss feed

--- a/apps/docs/src/components/docs/GetHelpWidget.astro
+++ b/apps/docs/src/components/docs/GetHelpWidget.astro
@@ -4,7 +4,7 @@ import { DISCORD_INVITE_LINK } from "@/utils/constants";
 
 ---
 
-<div class="p-4 flex flex-col gap-4 bg-primary-100 dark:bg-primary-800">
+<div class="p-4 flex flex-col gap-4 border dark:border-0 dark:bg-primary-800">
   <span>
     <strong>Need help?</strong> Check out our <a class="always-underline" href={DISCORD_INVITE_LINK}>Discord.</a>
   </span>
