--- a/apps/docs/src/layouts/Blog.astro
+++ b/apps/docs/src/layouts/Blog.astro
@@ -1,4 +1,5 @@
 ---
+import Icon from "astro-icon";
 import { getCollection } from "astro:content";
 
 const rawBlogPosts = await getCollection("blog");
@@ -17,15 +18,18 @@ const blogPosts = rawBlogPosts.sort((postA, postB) => {
 ---
 
 <div class="flex flex-col lg:flex-row">
-  <main id="main" class="flex-auto main-content pt-10 pb-10 px-4 w-screen sm:w-full">
+  <main
+    id="main"
+    class="flex-auto main-content pt-10 pb-10 px-4 w-screen sm:w-full"
+  >
     <div class="prose lg:prose-xl dark:prose-invert mx-auto" data-pagefind-body>
       <slot />
     </div>
   </main>
 
-  <aside class="sidebar lg:w-80 p-4 pt-10">
+  <aside class="sidebar lg:w-80 p-4 pt-10 flex flex-col gap-4">
     <h3 class="font-bold">Recent Posts</h3>
-    <ul class="pl-6">
+    <ul class="pl-6 flex flex-col gap-2">
       {
         blogPosts.map((blogPost) => (
           <li>
@@ -36,5 +40,16 @@ const blogPosts = rawBlogPosts.sort((postA, postB) => {
         ))
       }
     </ul>
+    <div class="border p-4 flex flex-col gap-4">
+      <h4>Subscribe to RSS feed</h4>
+      <p>Get the latest news from Vexilla as we make new posts.</p>
+      <a
+        href="/rss.xml"
+        class="flex w-1/3 items-center justify-between border p-1 px-2 pr-3 rounded-full"
+      >
+        <Icon width={24} name="phosphor/bold/rss-simple-bold" />
+        <span> RSS </span>
+      </a>
+    </div>
   </aside>
 </div>
