--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const isServices = Astro.url.pathname.startsWith("/services");
 const rawDocumentationPages = await getCollection("documentation");
 
 const globbedDocumentationPages = await Astro.glob(
-  "../content/documentation/*.mdoc",
+  "../content/documentation/*.mdoc"
 );
 
 const documentationPages = await Promise.all(
@@ -49,12 +49,12 @@ const documentationPages = await Promise.all(
 
     if (typeof globbedPage?.getHeadings === "function") {
       newPage.headings = ((await globbedPage?.getHeadings()).filter(
-        (heading: Heading) => heading.depth === 2,
+        (heading: Heading) => heading.depth === 2
       ) || []) as Heading[];
     }
 
     return newPage;
-  }),
+  })
 );
 
 documentationPages.sort((a, b) => {
@@ -75,12 +75,12 @@ const guidePages = await Promise.all(
 
     if (typeof globbedPage?.getHeadings === "function") {
       newPage.headings = ((await globbedPage?.getHeadings()).filter(
-        (heading: Heading) => heading.depth === 2,
+        (heading: Heading) => heading.depth === 2
       ) || []) as Heading[];
     }
 
     return newPage;
-  }),
+  })
 );
 
 guidePages.sort((a, b) => {
@@ -336,7 +336,7 @@ guidePages.sort((a, b) => {
     </ResponsiveContainer>
 
     <div class="sm:hidden p-4">
-      <GetHelpWidget></GetHelpWidget>
+      <GetHelpWidget />
     </div>
 
     <footer class="mt-auto bg-primary-50 dark:bg-primary-900">
@@ -407,6 +407,6 @@ guidePages.sort((a, b) => {
         </div>
       </ResponsiveContainer>
     </footer>
-    <GetHelpButton client:only></GetHelpButton>
+    <GetHelpButton client:only />
   </body>
 </html>
