fix(docs): give the docs layout sidebar a min width

--- a/apps/docs/src/layouts/CommonDocumentation.astro
+++ b/apps/docs/src/layouts/CommonDocumentation.astro
@@ -20,7 +20,7 @@ const { documentationPages, currentPost, currentPageSlug, pathPrefix = "document
 
 <div class="flex flex-row">
   <div class="w-[22rem] p-2 pr-8 relative hidden lg:block pt-10">
-    <nav aria-label="Sidebar" class="sticky top-16 max-h-[calc(100vh-4rem)] overflow-y-auto p-2">
+    <nav aria-label="Sidebar" class="sticky min-w-[14rem] top-16 max-h-[calc(100vh-4rem)] overflow-y-auto p-2">
       <ul>
         {
           documentationPages.map((page) => (
